# SwiftySyncStorage

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Data.h  Functions.h  Helper.h  Request.h  SwiftySyncStorage-Bridging-Header.h  SwiftySyncStorage.cpp  SwiftySyncStorage.h  SwiftySyncStorage.hpp  SwiftySyncStorage.sln  SwiftySyncStorage.vcxproj  SwiftySyncStorage.vcxproj.filters  c-api-storage.cpp  c-api-storage.h  c_api_storage.cpp  c_api_storage_helper.cpp  c_api_storage_helper.h  c_api_storage_helper.hpp  main.cpp  main.swift  requestsDoc.MD  test_c_api_storage.c
SwiftySyncStorage.xcodeproj/: project.pbxproj
SwiftySyncStorage.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
SwiftySyncStorage.xcodeproj/project.xcworkspace/xcuserdata/evgenij.xcuserdatad/: UserInterfaceState.xcuserstate
SwiftySyncStorage.xcodeproj/xcuserdata/evgenij.xcuserdatad/xcschemes/: xcschememanagement.plist
include/: SwiftySyncStorage.hpp  c_api_storage.h  c_api_storage_helper.hpp
src/: SwiftySyncStorage.cpp  c_api_storage.cpp  c_api_storage_helper.cpp
test/: test.cpp
